# android-mms-automation

./: pyproject.toml  requirements.txt
config/: settings.toml
src/android_mms_automation/: adb.py  cli.py  config.py  device.py
